# section-binding

./: .gitignore  .pylintrc  FINAL_STATUS.md  MANIFEST.in  PACKAGE_CLEANUP.md  PUBLISHING.md  PUBLISH_NOW.md  QUICK_PUBLISH.md  README.md  add_page_numbers  create_test_pdf  example_usage  publish.py  pyproject.toml  requirements.txt  setup.py
src/: add_page_numbers.py  create_test_pdf.py  demo.py  example_usage.py  section_binding.py  test_section_binding.py
src/pdf_section_binding/: __init__.py  cli.py  core.py  version.py
tests/: test_section_binding.py
tests/test-data/: .gitkeep
